# hashtrade-dashboard

./: example-web.html  example.html.result.md  test.md  trading-dashboard.html
strands-trading-dashboard/: .env.example  pyproject.toml
strands-trading-dashboard/data/: history.jsonl
strands-trading-dashboard/server/: main.py
strands-trading-dashboard/strands_trading_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
strands-trading-dashboard/tools/: __init__.py  ccxt_tool.py  history.py  trading_agent.py
strands-trading-dashboard/web/: index.html
trading_dashboard/: index.html
